--- a/index-Copy1.ipynb
+++ b/index-Copy1.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,20 +35,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Driver class here"
+    "# import Driver class here\n",
+    "from driver import Driver"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import Passenger class here"
+    "# import Passenger class here\n",
+    "from passenger import Passenger"
    ]
   },
   {
@@ -67,12 +69,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<passenger.Passenger object at 0x10295a0f0> <passenger.Passenger object at 0x10295a0b8>\n"
+     ]
+    }
+   ],
    "source": [
-    "meryl = None\n",
-    "daniel = None\n",
+    "meryl = Passenger()\n",
+    "daniel = Passenger()\n",
     "print(meryl, daniel)"
    ]
   },
@@ -85,11 +95,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<driver.Driver object at 0x1009d3e10>\n"
+     ]
+    }
+   ],
    "source": [
-    "flatiron_taxi = None\n",
+    "flatiron_taxi = Driver()\n",
     "print(flatiron_taxi)"
    ]
   },
@@ -102,14 +120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<ride.Ride object at 0x10295a208> <ride.Ride object at 0x10295a1d0>\n"
+     ]
+    }
+   ],
    "source": [
-    "ride_to_school = None\n",
-    "ride_home = None\n",
+    "ride_to_school = Ride()\n",
+    "ride_home = Ride()\n",
     "print(ride_to_school, ride_home)"
    ]
   },
